// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/actions/appActions.ts creates app actions without error 1`] = `
{
  "checkSuperStakeLstSubaccountForAuthority": [Function],
  "handleSuperStakeDeposit": [Function],
  "handleSuperStakeRepayBorrow": [Function],
  "handleSuperStakeWithdrawal": [Function],
  "resetCurrentUserData": [Function],
  "switchActiveLst": [Function],
  "switchActiveSubaccount": [Function],
  "switchSubaccountToActiveLst": [Function],
  "updateCurrentUserData": [Function],
}
`;

exports[`src/actions/appActions.ts switchActiveLst action switchActiveLst sets new state with valid LSTs 1`] = `
{
  "activeLst": {
    "defaultLeverage": 1.4,
    "driftAccountName": "Super Stake JitoSOL",
    "logoUrl": "/jitoSol.svg",
    "maxLeverage": 1.8,
    "onlyDirectRoute": true,
    "spotMarket": {
      "marketIndex": 6,
      "mint": "J1toso1uCk3RLmjorhTtrVwY9HJ7X8V9yYac6Y7kGCPn",
      "oracle": "9QE1P5EfzthYDgoQ9oPeTByCEKaRJeZbVVqKJfgU9iau",
      "oracleSource": {
        "pythPull": {},
      },
      "phoenixMarket": "5LQLfGtqcC5rm2WuGxJf4tjqYmDjsQAbKo2AMLQ8KB7p",
      "precision": "3b9aca00",
      "precisionExp": "09",
      "pythFeedId": "0x67be9f519b95cf24338801051f9a808eff0a578ccb388db73b7f6fe1de019ffb",
      "serumMarket": "DkbVbMhFxswS32xnn1K2UY4aoBugXooBTxdzkWWDWRkH",
      "symbol": "jitoSOL",
    },
    "symbol": "JitoSOL",
  },
  "stakeUnstakeForm": {
    "amountToStakeString": "",
    "amountToStakeUncappedString": "",
    "amountToUnstakeString": "",
    "isMaxStake": false,
    "isMaxUnstake": false,
    "leverageToUse": 1.4,
    "unstakeLeverage": 0,
  },
}
`;

exports[`src/actions/appActions.ts switchActiveLst action switchActiveLst sets new state with valid LSTs 2`] = `
{
  "activeLst": {
    "defaultLeverage": 2,
    "driftAccountName": "Super Stake SOL",
    "logoUrl": "/mSol.svg",
    "maxLeverage": 3,
    "onlyDirectRoute": true,
    "spotMarket": {
      "marketIndex": 2,
      "mint": "mSoLzYCxHdYgdzU16g5QSh3i5K3z3KZK7ytfqcJm7So",
      "oracle": "FAq7hqjn7FWGXKDwJHzsXGgBcydGTcK4kziJpAGWXjDb",
      "oracleSource": {
        "pythPull": {},
      },
      "precision": "3b9aca00",
      "precisionExp": "09",
      "pythFeedId": "0xc2289a6a43d2ce91c6f55caec370f4acc38a2ed477f58813334c6d03749ff2a4",
      "serumMarket": "9Lyhks5bQQxb9EyyX55NtgKQzpM4WK7JCmeaWuQ5MoXD",
      "symbol": "mSOL",
    },
    "symbol": "mSOL",
  },
  "stakeUnstakeForm": {
    "amountToStakeString": "",
    "amountToStakeUncappedString": "",
    "amountToUnstakeString": "",
    "isMaxStake": false,
    "isMaxUnstake": false,
    "leverageToUse": 2,
    "unstakeLeverage": 0,
  },
}
`;

exports[`src/actions/appActions.ts switchActiveLst action switchActiveLst throws an error with invalid LST 1`] = `""No LST exists with symbol longLiveSolana"`;
